--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,11 @@
-# ===== Web Framework =====
+--extra-index-url https://download.pytorch.org/whl/cpu
+
 fastapi==0.111.0
 uvicorn==0.23.2
-
-# ===== Core ML & Data =====
-numpy==1.26.4
 pandas==2.2.3
+numpy==1.26.4
 scikit-learn==1.3.0
-
-# ===== Deep Learning =====
-torch==2.2.0
-nbeats-pytorch==1.6.0
-
-# ===== Visualization =====
-matplotlib==3.8.1
-
-# ===== API & Utilities =====
+joblib==1.5.3
 requests==2.32.0
 python-dotenv==1.0.0
+torch==2.2.0+cpu
