--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@
 
 fastapi==0.111.0
 uvicorn==0.23.2
-pandas==2.2.3
 numpy==1.26.4
+pandas==2.2.3
 scikit-learn==1.3.0
 joblib==1.5.3
-requests==2.32.0
-python-dotenv==1.0.0
+nbeats-pytorch==1.6.0
 torch==2.2.0+cpu
+python-dotenv==1.0.0
+requests==2.32.0
