--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-fastapi==0.111.0
-uvicorn==0.30.1
+--extra-index-url https://download.pytorch.org/whl/cpu
 
-torch==2.6.0
-nbeats-pytorch==1.8.0
-
+fastapi==0.110.0
+uvicorn==0.29.0
+requests==2.31.0
 pandas==2.2.2
 numpy==1.26.4
-
-requests==2.32.3
+torch==2.1.0+cpu
 python-dotenv==1.0.1
-
