--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,33 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
 
-fastapi==0.110.0
-uvicorn==0.29.0
-requests==2.31.0
-pandas==2.2.2
-numpy==1.26.4
-torch==2.1.0+cpu
+# ----------------------------
+# Core
+# ----------------------------
 python-dotenv==1.0.1
+numpy==1.26.4
+pandas==2.2.2
+
+# ----------------------------
+# Machine Learning
+# ----------------------------
+torch==2.1.2+cpu
+
+# ----------------------------
+# API
+# ----------------------------
+fastapi==0.110.0
+uvicorn[standard]==0.29.0
+pydantic==2.6.4
+
+# ----------------------------
+# Utilities
+# ----------------------------
+scikit-learn==1.4.1.post1
+requests==2.31.0
+
+
+
+
+
+
+
